--- a/unknown_857ztx.log.json
+++ b/unknown_857ztx.log.json
@@ -6,7 +6,7 @@
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565855292286,
-	"last_scraped": 1568159199642,
+	"last_scraped": 1568167574594,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568199330158,
+	"next_scrape": 1568209881884,
 	"category": "plant_sim",
-	"last_update": 1568159199642,
+	"last_update": 1568167574594,
 	"output": [
 		{
 			"args": {},
@@ -81,6 +81,22 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 647,
+			"base": "c:\"yt4lgn\" d:\"<f l n s w>\"\n\n\n\n\n                 \n                 Ã\n                 Ã\n                 ",
+			"fragments": [
+				"ter i",
+				"aki s",
+				" USER",
+				"smirza",
+				"mirza ",
+				"yawaki ",
+				"mhollist",
+				"irza | S",
+				"USER mho"
+			]
 		}
 	],
 	"identified": [
@@ -99,6 +115,6 @@
 			]
 		}
 	],
-	"updt": 1568149696479,
-	"edit": 49
+	"updt": 1568159218590,
+	"edit": 50
 }
