--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -100,6 +100,18 @@
 				"LST0XC",
 				" ERROR ",
 				"X7BE4_FI"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"T0XF4_",
+						"ST ERR",
+						"LST0XC",
+						" ERROR ",
+						"X7BE4_FI"
+					]
+				}
 			]
 		}
 	],
@@ -115,6 +127,6 @@
 			]
 		}
 	],
-	"updt": 1568151050265,
-	"edit": 52
+	"updt": 1568161024220,
+	"edit": 53
 }
