--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1568160792053,
+	"last_scraped": 1568169132092,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1568200739342,
+	"next_scrape": 1568214877651,
 	"category": "plant_sim",
-	"last_update": 1568160792053,
+	"last_update": 1568169132092,
 	"output": [
 		{
 			"args": {},
@@ -176,7 +176,7 @@
 		},
 		{
 			"args": {},
-			"calls": 682,
+			"calls": 1742,
 			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n\n               \n                  /\n                \\/\n               ,|Ã\n               ",
 			"fragments": [
 				"ould b",
@@ -189,6 +189,28 @@
 				"ng max a",
 				"ld bring",
 				", impres"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"l, e, ",
+						"## goo",
+						" obstr",
+						"g to be",
+						"d you c",
+						", e, im",
+						"ng max a",
+						"ld bring",
+						", impres"
+					]
+				},
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"ould b"
+					]
+				}
 			]
 		}
 	],
@@ -214,6 +236,6 @@
 			]
 		}
 	],
-	"updt": 1568151277419,
-	"edit": 50
+	"updt": 1568161024220,
+	"edit": 51
 }
