--- a/uknown_q2fm52.databank.json
+++ b/uknown_q2fm52.databank.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_q2fm52.databank",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_q2fm52.databank",
 	"sector": "NGC_0709",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561302392131
+		},
+		{
+			"type": "died",
+			"when": 1568183444092
 		}
 	],
 	"next_scrape": 1567855279755,
@@ -197,8 +201,8 @@
 			]
 		}
 	],
-	"updt": 1567795714834,
-	"edit": 103,
+	"updt": 1567810382027,
+	"edit": 104,
 	"identified": [
 		{
 			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
