--- a/uknown_q2fm52.lock_distro.json
+++ b/uknown_q2fm52.lock_distro.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_q2fm52.lock_distro",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_q2fm52.lock_distro",
 	"sector": "SPC_4642",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564818042755
+		},
+		{
+			"type": "died",
+			"when": 1568183227219
 		}
 	],
 	"next_scrape": 1568224951121,
@@ -87,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1568174553140,
-	"edit": 98
+	"updt": 1568181999371,
+	"edit": 99
 }
