--- a/unknown_82noe7.db.json
+++ b/unknown_82noe7.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_82noe7.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_82noe7.db",
 	"sector": "HJG_0244",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561165543635
+		},
+		{
+			"type": "died",
+			"when": 1568185873776
 		}
 	],
 	"next_scrape": 1568224454605,
@@ -70,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1568173199670,
-	"edit": 331,
+	"updt": 1568180648402,
+	"edit": 332,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
