--- a/unknown_puelke.external_36e0n4.json
+++ b/unknown_puelke.external_36e0n4.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_puelke.external_36e0n4",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "unknown_puelke.external_36e0n4",
 	"sector": "VNP_8719",
 	"sec_level": 2,
@@ -13,8 +13,8 @@
 			"when": 1563233887042
 		}
 	],
-	"updt": 1568174101420,
-	"edit": 47,
+	"updt": 1568181548886,
+	"edit": 48,
 	"pl_output": "`NOh no! You ``VHacked ``Nme!`",
 	"next_scrape": 1568262189276
 }
