--- a/unknown_j1o9bp.big_red_button.json
+++ b/unknown_j1o9bp.big_red_button.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_j1o9bp.big_red_button",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_j1o9bp.big_red_button",
 	"sector": "HJG_4491",
 	"sec_level": 4,
 	"date_added": 1560154185252,
-	"last_scraped": 1568186594447,
+	"last_scraped": 1568193935774,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560154185252
 		}
 	],
-	"next_scrape": 1568230273366,
+	"next_scrape": 1568235338225,
 	"category": "coin_flipper",
-	"last_update": 1568186594447,
+	"last_update": 1568193935774,
 	"output": [
 		{
 			"args": {},
-			"calls": 2871351,
+			"calls": 2887287,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"| PROG ",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1568179744504,
-	"edit": 280
+	"updt": 1568186734680,
+	"edit": 281
 }
