--- a/uknown_pg7a89.q.json
+++ b/uknown_pg7a89.q.json
@@ -6,20 +6,20 @@
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1564862745653,
-	"last_scraped": 1568188421076,
+	"last_scraped": 1568195975454,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564862745653
 		}
 	],
-	"next_scrape": 1568233082055,
+	"next_scrape": 1568242395182,
 	"category": "coin_flipper",
-	"last_update": 1568188421076,
+	"last_update": 1568195975454,
 	"output": [
 		{
 			"args": {},
-			"calls": 995423,
+			"calls": 1003948,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"OR | P",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1568181548886,
-	"edit": 80
+	"updt": 1568188537562,
+	"edit": 81
 }
