--- a/uknown_zfq3ba.solver.json
+++ b/uknown_zfq3ba.solver.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_zfq3ba.solver",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_zfq3ba.solver",
 	"sector": "VNP_8704",
 	"sec_level": 4,
 	"date_added": 1566693077835,
-	"last_scraped": 1568190409196,
+	"last_scraped": 1568197766320,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566693077835
 		}
 	],
-	"next_scrape": 1568236440987,
+	"next_scrape": 1568243529374,
 	"category": "coin_flipper",
-	"last_update": 1568190409196,
+	"last_update": 1568197766320,
 	"output": [
 		{
 			"args": {},
-			"calls": 1068827,
+			"calls": 1089084,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ieve ",
@@ -75,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1568183353217,
-	"edit": 82
+	"updt": 1568190568249,
+	"edit": 83
 }
