--- a/unknown_0pkjh3.trust.json
+++ b/unknown_0pkjh3.trust.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_0pkjh3.trust",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0pkjh3.trust",
 	"sector": "K_7459",
 	"sec_level": 4,
 	"date_added": 1564357522436,
-	"last_scraped": 1568194818957,
+	"last_scraped": 1568201903356,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564357522436
 		}
 	],
-	"next_scrape": 1568239475882,
+	"next_scrape": 1568245741083,
 	"category": "dice_roller",
-	"last_update": 1568194818957,
+	"last_update": 1568201903356,
 	"output": [
 		{
 			"args": {},
-			"calls": 1758277,
+			"calls": 1774804,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"sy to",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568187412048,
-	"edit": 151
+	"updt": 1568194853048,
+	"edit": 152
 }
