--- a/unknown_32snxj.mag.json
+++ b/unknown_32snxj.mag.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_32snxj.mag",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_32snxj.mag",
 	"sector": "NGC_1836",
 	"sec_level": 4,
 	"date_added": 1564690214907,
-	"last_scraped": 1568201172273,
+	"last_scraped": 1568201202802,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564690214907
 		}
 	],
-	"next_scrape": 1568242222085,
+	"next_scrape": 1568245421420,
 	"category": "plant_sim",
-	"last_update": 1568194067392,
+	"last_update": 1568201202802,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 48866,
+			"calls": 50198,
 			"base": "c:\"qta0g2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ible ",
