--- a/uknown_ayqcsi.riot.json
+++ b/uknown_ayqcsi.riot.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.riot",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ayqcsi.riot",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568195764772,
+	"last_scraped": 1568202941443,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568195756709,
-	"edit": 211,
+	"updt": 1568195981989,
+	"edit": 212,
 	"output": [
 		{
 			"args": {},
-			"calls": 45024996,
+			"calls": 45475894,
 			"base": "User not recognized, aborting...",
 			"fragments": [
 				"treng",
@@ -77,10 +77,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568241671074,
+	"next_scrape": 1568242988771,
 	"pl_output": "User not recognized, aborting...",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568195764772,
+	"last_update": 1568202941443,
 	"old_output": "User not recognized, aborting...",
 	"identified": [
 		{
