--- a/uknown_4ild70.market.json
+++ b/uknown_4ild70.market.json
@@ -6,20 +6,20 @@
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565595001116,
-	"last_scraped": 1568197272501,
+	"last_scraped": 1568204752208,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565595001116
 		}
 	],
-	"next_scrape": 1568239002653,
+	"next_scrape": 1568245590012,
 	"category": "coin_flipper",
-	"last_update": 1568197272501,
+	"last_update": 1568204752208,
 	"output": [
 		{
 			"args": {},
-			"calls": 995744,
+			"calls": 1011843,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"se, s",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1568190115393,
-	"edit": 85
+	"updt": 1568197340684,
+	"edit": 86
 }
