--- a/uknown_97pnal.status.json
+++ b/uknown_97pnal.status.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_97pnal.status",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_97pnal.status",
 	"sector": "HJG_7908",
 	"sec_level": 4,
 	"date_added": 1565565851514,
-	"last_scraped": 1568196760258,
+	"last_scraped": 1568204151807,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565565851514
 		}
 	],
-	"next_scrape": 1568236629241,
+	"next_scrape": 1568250175294,
 	"category": "coin_flipper",
-	"last_update": 1568196760258,
+	"last_update": 1568204151807,
 	"output": [
 		{
 			"args": {},
-			"calls": 938678,
+			"calls": 954099,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"evs a",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1568189438967,
-	"edit": 79
+	"updt": 1568196887035,
+	"edit": 80
 }
