--- a/uknown_fzffni.bot_brain.json
+++ b/uknown_fzffni.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_fzffni.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_fzffni.bot_brain",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564461987370,
-	"last_scraped": 1568203547376,
+	"last_scraped": 1568210774226,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564461987370
 		}
 	],
-	"next_scrape": 1568245604741,
+	"next_scrape": 1568254485886,
 	"category": "plant_sim",
-	"last_update": 1568203547376,
+	"last_update": 1568210774226,
 	"output": [
 		{
 			"args": {},
@@ -71,7 +71,7 @@
 		},
 		{
 			"args": {},
-			"calls": 69068,
+			"calls": 70817,
 			"base": "c:\"dmio3k\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"iscus",
@@ -127,6 +127,6 @@
 			]
 		}
 	],
-	"updt": 1568196437666,
-	"edit": 146
+	"updt": 1568203652037,
+	"edit": 147
 }
