--- a/uknown_kicz6i.k3y_cull.json
+++ b/uknown_kicz6i.k3y_cull.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_kicz6i.k3y_cull",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_kicz6i.k3y_cull",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562011754363,
-	"last_scraped": 1568216166757,
+	"last_scraped": 1568223450093,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562011754363
 		}
 	],
-	"next_scrape": 1568258084420,
+	"next_scrape": 1568267591696,
 	"category": "coin_flipper",
-	"last_update": 1568216166757,
+	"last_update": 1568223450093,
 	"output": [
 		{
 			"args": {},
-			"calls": 2847398,
+			"calls": 2861611,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"el li",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568209060933,
-	"edit": 272
+	"updt": 1568216501801,
+	"edit": 273
 }
