--- a/unknown_csa049.t3dbscrape.json
+++ b/unknown_csa049.t3dbscrape.json
@@ -6,20 +6,20 @@
 	"sector": "K_1812",
 	"sec_level": 4,
 	"date_added": 1566509977003,
-	"last_scraped": 1568219852237,
+	"last_scraped": 1568227165423,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566509977003
 		}
 	],
-	"next_scrape": 1568266148714,
+	"next_scrape": 1568271276690,
 	"category": "dice_roller",
-	"last_update": 1568219852237,
+	"last_update": 1568227165423,
 	"output": [
 		{
 			"args": {},
-			"calls": 994921,
+			"calls": 1006789,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"hank ",
@@ -51,6 +51,6 @@
 			]
 		}
 	],
-	"updt": 1568212893849,
-	"edit": 90
+	"updt": 1568219884636,
+	"edit": 91
 }
