--- a/derelict_clrnxi.donate.json
+++ b/derelict_clrnxi.donate.json
@@ -1,21 +1,21 @@
 {
 	"_id": "derelict_clrnxi.donate",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_clrnxi.donate",
 	"sector": "SPC_4267",
 	"sec_level": 4,
 	"date_added": 1565382488474,
-	"last_scraped": 1568232420401,
+	"last_scraped": 1568239209200,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565382488474
 		}
 	],
-	"next_scrape": 1568276681605,
+	"next_scrape": 1568282890234,
 	"category": "plant_sim",
-	"last_update": 1568232420401,
+	"last_update": 1568239209200,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 52916,
+			"calls": 54445,
 			"base": "c:\"wz0fyi\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"7_FIL",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1568225749324,
-	"edit": 67
+	"updt": 1568232740554,
+	"edit": 68
 }
