--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_6mixmg.whitelist",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_6mixmg.whitelist",
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1568234326065,
+	"last_scraped": 1568240746313,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1568275407926,
+	"next_scrape": 1568326632255,
 	"category": "plant_sim",
-	"last_update": 1568234326065,
+	"last_update": 1568240746313,
 	"output": [
 		{
 			"args": {},
@@ -176,7 +176,7 @@
 		},
 		{
 			"args": {},
-			"calls": 8417,
+			"calls": 9441,
 			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n\n               \n                  /\n                \\/\n               ,|Ã\n               ",
 			"fragments": [
 				"ould b",
@@ -236,6 +236,6 @@
 			]
 		}
 	],
-	"updt": 1568227551149,
-	"edit": 60
+	"updt": 1568234545537,
+	"edit": 61
 }
