--- a/uknown_b23kas.com.json
+++ b/uknown_b23kas.com.json
@@ -6,20 +6,20 @@
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1565099817917,
-	"last_scraped": 1568238013680,
+	"last_scraped": 1568244176702,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565099817917
 		}
 	],
-	"next_scrape": 1568279000205,
+	"next_scrape": 1568286249008,
 	"category": "coin_flipper",
-	"last_update": 1568238013680,
+	"last_update": 1568244176702,
 	"output": [
 		{
 			"args": {},
-			"calls": 996215,
+			"calls": 1000472,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"to for",
@@ -57,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1568231162254,
-	"edit": 85
+	"updt": 1568238150389,
+	"edit": 86
 }
