--- a/unknown_ticrfg.main_cronscript.json
+++ b/unknown_ticrfg.main_cronscript.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ticrfg.main_cronscript",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ticrfg.main_cronscript",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561316929498,
-	"last_scraped": 1568276300728,
+	"last_scraped": 1568282523199,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561316929498
 		}
 	],
-	"next_scrape": 1568322824655,
+	"next_scrape": 1568326657268,
 	"category": "dice_roller",
-	"last_update": 1568276300728,
+	"last_update": 1568282523199,
 	"output": [
 		{
 			"args": {},
-			"calls": 2563280,
+			"calls": 2577032,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"T0X0B",
@@ -54,8 +54,8 @@
 			]
 		}
 	],
-	"updt": 1568269952083,
-	"edit": 252,
+	"updt": 1568276720553,
+	"edit": 253,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
