--- a/uknown_pg7a89.q.json
+++ b/uknown_pg7a89.q.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_pg7a89.q",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_pg7a89.q",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1564862745653,
-	"last_scraped": 1568277826281,
+	"last_scraped": 1568284438734,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564862745653
 		}
 	],
-	"next_scrape": 1568321013045,
+	"next_scrape": 1568325418189,
 	"category": "coin_flipper",
-	"last_update": 1568277826281,
+	"last_update": 1568284438734,
 	"output": [
 		{
 			"args": {},
-			"calls": 1120030,
+			"calls": 1122874,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"OR | P",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1568271979715,
-	"edit": 93
+	"updt": 1568277849224,
+	"edit": 94
 }
