--- a/uknown_cde4xl.cracker.json
+++ b/uknown_cde4xl.cracker.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_cde4xl.cracker",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_cde4xl.cracker",
 	"sector": "HJG_6509",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562385099359
+		},
+		{
+			"type": "died",
+			"when": 1568288235929
 		}
 	],
 	"scrape_ct": 20,
@@ -148,8 +152,8 @@
 			]
 		}
 	],
-	"updt": 1567646160463,
-	"edit": 4,
+	"updt": 1567714945331,
+	"edit": 5,
 	"identified": [
 		{
 			"document": "NOT FOUND",
