--- a/uknown_ido5g4.free_vbucks.json
+++ b/uknown_ido5g4.free_vbucks.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_ido5g4.free_vbucks",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ido5g4.free_vbucks",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564080977341,
-	"last_scraped": 1568291241049,
+	"last_scraped": 1568297699884,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564080977341
 		}
 	],
-	"next_scrape": 1568331128392,
+	"next_scrape": 1568340062974,
 	"category": "coin_flipper",
-	"last_update": 1568291241049,
+	"last_update": 1568297699884,
 	"output": [
 		{
 			"args": {},
-			"calls": 1255082,
+			"calls": 1268713,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"sence",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1568285062339,
-	"edit": 111
+	"updt": 1568297696018,
+	"edit": 113
 }
