--- a/unknown_ajhomk.sh.json
+++ b/unknown_ajhomk.sh.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ajhomk.sh",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ajhomk.sh",
 	"sector": "K_7542",
 	"sec_level": 4,
 	"date_added": 1561468558289,
-	"last_scraped": 1568291529601,
+	"last_scraped": 1568298121312,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561468558289
 		}
 	],
-	"next_scrape": 1568331602972,
+	"next_scrape": 1568341353924,
 	"category": "coin_flipper",
-	"last_update": 1568291529601,
+	"last_update": 1568298121312,
 	"output": [
 		{
 			"args": {},
-			"calls": 1810134,
+			"calls": 1829237,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ERROR",
@@ -68,8 +68,8 @@
 			]
 		}
 	],
-	"updt": 1568285062339,
-	"edit": 176,
+	"updt": 1568291827154,
+	"edit": 177,
 	"identified": [
 		{
 			"document": "Essence",
