--- a/unknown_tffux6.db.json
+++ b/unknown_tffux6.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_tffux6.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_tffux6.db",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566124296849,
-	"last_scraped": 1568292664764,
+	"last_scraped": 1568299537753,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566124296849
 		}
 	],
-	"next_scrape": 1568338760547,
+	"next_scrape": 1568342094871,
 	"category": "dice_roller",
-	"last_update": 1568292664764,
+	"last_update": 1568299537753,
 	"output": [
 		{
 			"args": {},
-			"calls": 926153,
+			"calls": 943773,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ton a",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568286415374,
-	"edit": 81
+	"updt": 1568292730210,
+	"edit": 82
 }
