--- a/uknown_k66n3m.gibson_hypercracker.json
+++ b/uknown_k66n3m.gibson_hypercracker.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_k66n3m.gibson_hypercracker",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_k66n3m.gibson_hypercracker",
 	"sector": "HJG_8307",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562347835064
+		},
+		{
+			"type": "died",
+			"when": 1568300392612
 		}
 	],
 	"next_scrape": 1568341033036,
@@ -114,6 +118,6 @@
 			]
 		}
 	],
-	"updt": 1568290250195,
-	"edit": 290
+	"updt": 1568296791308,
+	"edit": 291
 }
