--- a/unknown_zxjr6w.db.json
+++ b/unknown_zxjr6w.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_zxjr6w.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_zxjr6w.db",
 	"sector": "HJG_7089",
 	"sec_level": 4,
 	"date_added": 1559786367496,
-	"last_scraped": 1568302511976,
+	"last_scraped": 1568309012329,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1559786367496
 		}
 	],
-	"next_scrape": 1568347641573,
+	"next_scrape": 1568350864951,
 	"category": "dice_roller",
-	"last_update": 1568302511976,
+	"last_update": 1568309012329,
 	"output": [
 		{
 			"args": {},
-			"calls": 2758815,
+			"calls": 2773201,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s' th",
@@ -70,8 +70,8 @@
 			]
 		}
 	],
-	"updt": 1568296113273,
-	"edit": 274,
+	"updt": 1568303113145,
+	"edit": 275,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
