--- a/unknown_k8rbwr.loc.json
+++ b/unknown_k8rbwr.loc.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_k8rbwr.loc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_k8rbwr.loc",
 	"sector": "HJG_4601",
 	"sec_level": 4,
 	"date_added": 1566036024528,
-	"last_scraped": 1568317783800,
+	"last_scraped": 1568325576766,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566036024528
 		}
 	],
-	"next_scrape": 1568359670332,
+	"next_scrape": 1568365833478,
 	"category": "plant_sim",
-	"last_update": 1568317783800,
+	"last_update": 1568325576766,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 57918,
+			"calls": 59533,
 			"base": "c:\"ii4noy\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"tter i",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568311644085,
-	"edit": 87
+	"updt": 1568317961272,
+	"edit": 88
 }
