--- a/uknown_97pnal.db.json
+++ b/uknown_97pnal.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_97pnal.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_97pnal.db",
 	"sector": "K_8441",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562079751890
+		},
+		{
+			"type": "died",
+			"when": 1568331745805
 		}
 	],
 	"next_scrape": 1568373272921,
@@ -84,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568322248692,
-	"edit": 252
+	"updt": 1568330142713,
+	"edit": 253
 }
