--- a/uknown_97pnal.status.json
+++ b/uknown_97pnal.status.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_97pnal.status",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_97pnal.status",
 	"sector": "HJG_7908",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565565851514
+		},
+		{
+			"type": "died",
+			"when": 1568331767051
 		}
 	],
 	"next_scrape": 1568250175294,
@@ -78,6 +82,6 @@
 			]
 		}
 	],
-	"updt": 1568196887035,
-	"edit": 80
+	"updt": 1568204327263,
+	"edit": 81
 }
