--- a/unknown_csa049.t3dbscrape.json
+++ b/unknown_csa049.t3dbscrape.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_csa049.t3dbscrape",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_csa049.t3dbscrape",
 	"sector": "K_1812",
 	"sec_level": 4,
 	"date_added": 1566509977003,
-	"last_scraped": 1568327119024,
+	"last_scraped": 1568332957823,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566509977003
 		}
 	],
-	"next_scrape": 1568372401450,
+	"next_scrape": 1568377950931,
 	"category": "dice_roller",
-	"last_update": 1568327119024,
+	"last_update": 1568332957823,
 	"output": [
 		{
 			"args": {},
-			"calls": 1178403,
+			"calls": 1192302,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"hank ",
@@ -51,6 +51,6 @@
 			]
 		}
 	],
-	"updt": 1568319539307,
-	"edit": 107
+	"updt": 1568327212349,
+	"edit": 108
 }
