--- a/uknown_0e5o48.db.json
+++ b/uknown_0e5o48.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_0e5o48.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_0e5o48.db",
 	"sector": "K_7542",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1561577400027
+		},
+		{
+			"type": "died",
+			"when": 1568340702971
 		}
 	],
-	"updt": 1567647961454,
-	"edit": 62,
+	"updt": 1567714945331,
+	"edit": 63,
 	"next_scrape": 1567759371941,
 	"category": "clicker",
 	"last_update": 1567714003984,
