--- a/unknown_zkrnvn.botnet.json
+++ b/unknown_zkrnvn.botnet.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_zkrnvn.botnet",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_zkrnvn.botnet",
 	"sector": "HJG_0454",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560526618447
+		},
+		{
+			"type": "died",
+			"when": 1568341409666
 		}
 	],
 	"next_scrape": 1568382515949,
@@ -72,8 +76,8 @@
 			]
 		}
 	],
-	"updt": 1568331496277,
-	"edit": 258,
+	"updt": 1568337360103,
+	"edit": 259,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
