--- a/unknown_zxjr6w.scam.json
+++ b/unknown_zxjr6w.scam.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_zxjr6w.scam",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_zxjr6w.scam",
 	"sector": "K_6458",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566087932790
+		},
+		{
+			"type": "died",
+			"when": 1568347772877
 		}
 	],
 	"next_scrape": 1567879053867,
@@ -121,6 +125,6 @@
 			]
 		}
 	],
-	"updt": 1567822790770,
-	"edit": 38
+	"updt": 1567835428328,
+	"edit": 39
 }
