--- a/unknown_zxjr6w.db.json
+++ b/unknown_zxjr6w.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_zxjr6w.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_zxjr6w.db",
 	"sector": "HJG_7089",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1559786367496
+		},
+		{
+			"type": "died",
+			"when": 1568349569476
 		}
 	],
 	"next_scrape": 1568350864951,
@@ -70,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1568303113145,
-	"edit": 275,
+	"updt": 1568309388834,
+	"edit": 276,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
