--- a/uknown_oguceh.db.json
+++ b/uknown_oguceh.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_oguceh.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_oguceh.db",
 	"sector": "K_2655",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565256853492
+		},
+		{
+			"type": "died",
+			"when": 1568359447986
 		}
 	],
 	"scrape_ct": 10,
@@ -139,6 +143,6 @@
 			]
 		}
 	],
-	"updt": 1567768196853,
-	"edit": 7
+	"updt": 1567784206233,
+	"edit": 8
 }
