--- a/uknown_oguceh.dumb.json
+++ b/uknown_oguceh.dumb.json
@@ -1,27 +1,31 @@
 {
 	"_id": "uknown_oguceh.dumb",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_oguceh.dumb",
 	"sector": "K_7717",
 	"sec_level": 4,
 	"date_added": 1560997410909,
-	"last_scraped": 1568353556015,
+	"last_scraped": 1568358981241,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560997410909
+		},
+		{
+			"type": "died",
+			"when": 1568359477939
 		}
 	],
-	"updt": 1568348187456,
-	"edit": 312,
-	"next_scrape": 1568399679721,
+	"updt": 1568359232681,
+	"edit": 314,
+	"next_scrape": 1568402985912,
 	"category": "dice_roller",
-	"last_update": 1568353556015,
+	"last_update": 1568358981241,
 	"output": [
 		{
 			"args": {},
-			"calls": 3182725,
+			"calls": 3190902,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"RROR |",
