--- a/abandoned_8nxhv2.db.json
+++ b/abandoned_8nxhv2.db.json
@@ -6,20 +6,20 @@
 	"sector": "HJG_7908",
 	"sec_level": 4,
 	"date_added": 1565553244836,
-	"last_scraped": 1568360859962,
+	"last_scraped": 1568366466863,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565553244836
 		}
 	],
-	"next_scrape": 1568406432203,
+	"next_scrape": 1568406074329,
 	"category": "dice_roller",
-	"last_update": 1568360859962,
+	"last_update": 1568366466863,
 	"output": [
 		{
 			"args": {},
-			"calls": 987750,
+			"calls": 1007422,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ld wi",
@@ -75,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1568356078142,
-	"edit": 85
+	"updt": 1568366451993,
+	"edit": 87
 }
