--- a/uknown_0e5o48.db.json
+++ b/uknown_0e5o48.db.json
@@ -17,8 +17,8 @@
 			"when": 1568340702971
 		}
 	],
-	"updt": 1567714945331,
-	"edit": 63,
+	"updt": 1568340740499,
+	"edit": 64,
 	"next_scrape": 1567759371941,
 	"category": "clicker",
 	"last_update": 1567714003984,
@@ -44,12 +44,16 @@
 				{
 					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 					"frags": [
-						"neces",
 						"ta-pra",
+						"o start",
+						"cessity",
 						" with d",
 						" data-n",
+						"with dat",
+						"ta-neces",
 						"t we nee",
 						"d to sta",
+						"aring da",
 						" need to"
 					]
 				}
@@ -78,12 +82,16 @@
 				{
 					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 					"frags": [
-						"neces",
 						"ta-pra",
+						"o start",
+						"cessity",
 						" with d",
 						" data-n",
+						"with dat",
+						"ta-neces",
 						"t we nee",
 						"d to sta",
+						"aring da",
 						" need to"
 					]
 				}
@@ -112,12 +120,16 @@
 				{
 					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 					"frags": [
-						"neces",
 						"ta-pra",
+						"o start",
+						"cessity",
 						" with d",
 						" data-n",
+						"with dat",
+						"ta-neces",
 						"t we nee",
 						"d to sta",
+						"aring da",
 						" need to"
 					]
 				}
@@ -240,12 +252,16 @@
 		{
 			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
 			"frags": [
-				"neces",
 				"ta-pra",
+				"o start",
+				"cessity",
 				" with d",
 				" data-n",
+				"with dat",
+				"ta-neces",
 				"t we nee",
 				"d to sta",
+				"aring da",
 				" need to"
 			]
 		}
