--- a/unknown_jryjpv.vet.json
+++ b/unknown_jryjpv.vet.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_jryjpv.vet",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_jryjpv.vet",
 	"sector": "K_9556",
 	"sec_level": 4,
 	"date_added": 1559426750463,
-	"last_scraped": 1568371287691,
+	"last_scraped": 1568376634506,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,15 +26,15 @@
 		]
 	],
 	"pl_output": "\n\t\tWelcome to Vet v0.1.0, a `LFULLSEC` defensive security tool by sy. \n\t\tTo start vetting users and scripts, first make macros:\n\n\t\t/vet = sy.vet {{ name: \"{0}\" }}\n\n\t\tThen call it with /vet pica or /vet sy.vet \n",
-	"next_scrape": 1568417855351,
-	"updt": 1568366001127,
-	"edit": 336,
+	"next_scrape": 1568422468894,
+	"updt": 1568371417073,
+	"edit": 337,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568371287691,
+	"last_update": 1568376634506,
 	"output": [
 		{
 			"args": {},
-			"calls": 26427690,
+			"calls": 26568480,
 			"base": "\n\t\tWelcome to Vet v0.1.0, a `LFULLSEC` defensive security tool by sy. \n\t\tTo start vetting users and scripts, first make macros:\n\n\t\t/vet = sy.vet {{ name: \"{0}\" }}\n\n\t\tThen call it with /vet pica or /vet sy.vet \n",
 			"fragments": [
 				"is na",
