--- a/uknown_esonx7.bot_scam_do_not_run.json
+++ b/uknown_esonx7.bot_scam_do_not_run.json
@@ -6,22 +6,22 @@
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565252782525,
-	"last_scraped": 1568375858801,
+	"last_scraped": 1568381294501,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565252782525
 		}
 	],
-	"updt": 1568370741191,
-	"edit": 92,
-	"next_scrape": 1568422592455,
+	"updt": 1568376156221,
+	"edit": 93,
+	"next_scrape": 1568421686749,
 	"category": "dice_roller",
-	"last_update": 1568375858801,
+	"last_update": 1568381294501,
 	"output": [
 		{
 			"args": {},
-			"calls": 997166,
+			"calls": 1005063,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ou ar",
