--- a/uknown_67mgos.priv.json
+++ b/uknown_67mgos.priv.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_67mgos.priv",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_67mgos.priv",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563095388516,
-	"last_scraped": 1568396330099,
+	"last_scraped": 1568401800117,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563095388516
 		}
 	],
-	"next_scrape": 1568436107124,
+	"next_scrape": 1568444284419,
 	"category": "coin_flipper",
-	"last_update": 1568396330099,
+	"last_update": 1568401800117,
 	"output": [
 		{
 			"args": {},
-			"calls": 2309281,
+			"calls": 2327297,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"the c",
@@ -90,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1568391262167,
-	"edit": 204
+	"updt": 1568396903101,
+	"edit": 205
 }
