--- a/uknown_5a4huj.still_alive.json
+++ b/uknown_5a4huj.still_alive.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_5a4huj.still_alive",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_5a4huj.still_alive",
 	"sector": "K_1197",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1559916807146
+		},
+		{
+			"type": "died",
+			"when": 1568406508011
 		}
 	],
 	"next_scrape": 1567822726547,
@@ -70,8 +74,8 @@
 			]
 		}
 	],
-	"updt": 1567765263324,
-	"edit": 322,
+	"updt": 1567781274014,
+	"edit": 323,
 	"identified": [
 		{
 			"document": "Prisoners",
