--- a/uknown_5a4huj.bot_scam_do_not_run.json
+++ b/uknown_5a4huj.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_5a4huj.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_5a4huj.bot_scam_do_not_run",
 	"sector": "K_4785",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565744125921
+		},
+		{
+			"type": "died",
+			"when": 1568405895145
 		}
 	],
 	"scrape_ct": 15,
@@ -89,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1567784432535,
-	"edit": 9
+	"updt": 1567800225775,
+	"edit": 10
 }
