--- a/unknown_zwjdti.badthing.json
+++ b/unknown_zwjdti.badthing.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_zwjdti.badthing",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_zwjdti.badthing",
 	"sector": "SPC_8584",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560589369924
+		},
+		{
+			"type": "died",
+			"when": 1568410866421
 		}
 	],
 	"next_scrape": 1567880326730,
@@ -148,8 +152,8 @@
 			]
 		}
 	],
-	"updt": 1567824824806,
-	"edit": 128,
+	"updt": 1567837459281,
+	"edit": 129,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
