--- a/unknown_i8dzr5.il.json
+++ b/unknown_i8dzr5.il.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_i8dzr5.il",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_i8dzr5.il",
 	"sector": "K_1215",
 	"sec_level": 1,
 	"date_added": 1558821408422,
-	"last_scraped": 1568407280362,
+	"last_scraped": 1568412375414,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,14 +21,14 @@
 			}
 		]
 	],
-	"updt": 1568407271601,
-	"edit": 322,
+	"updt": 1568407498063,
+	"edit": 323,
 	"output": [
 		{
 			"args": {
 				"cmd": "help"
 			},
-			"calls": 2853632,
+			"calls": 2865537,
 			"base": "`DError:` you're not authorized to use this.",
 			"fragments": [
 				"treng",
@@ -63,10 +63,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568448118172,
+	"next_scrape": 1568453254174,
 	"pl_output": "`DError:` you're not authorized to use this.",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568407280362,
+	"last_update": 1568412375414,
 	"old_output": "`DError:` you're not authorized to use this.",
 	"identified": [
 		{
