--- a/unknown_jjd3ra.corps.json
+++ b/unknown_jjd3ra.corps.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_jjd3ra.corps",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_jjd3ra.corps",
 	"sector": "SPC_0043",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565684198543
+		},
+		{
+			"type": "died",
+			"when": 1568421104761
 		}
 	],
 	"scrape_ct": 17,
@@ -125,8 +129,8 @@
 			]
 		}
 	],
-	"updt": 1567752854061,
-	"edit": 7,
+	"updt": 1567768645962,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
