--- a/unknown_jjd3ra.respects.json
+++ b/unknown_jjd3ra.respects.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_jjd3ra.respects",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_jjd3ra.respects",
 	"sector": "K_3282",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560222229406
+		},
+		{
+			"type": "died",
+			"when": 1568421155823
 		}
 	],
 	"next_scrape": 1568464049740,
@@ -64,8 +68,8 @@
 			]
 		}
 	],
-	"updt": 1568412687084,
-	"edit": 376,
+	"updt": 1568418325133,
+	"edit": 377,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
