--- a/uknown_1gja1u.wordscraping.json
+++ b/uknown_1gja1u.wordscraping.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_1gja1u.wordscraping",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_1gja1u.wordscraping",
 	"sector": "HJG_5723",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562205568750
+		},
+		{
+			"type": "died",
+			"when": 1568428965314
 		}
 	],
 	"next_scrape": 1567844293111,
@@ -171,6 +175,6 @@
 			]
 		}
 	],
-	"updt": 1567789841875,
-	"edit": 66
+	"updt": 1567804062045,
+	"edit": 67
 }
