--- a/uknown_lr4o55.pixels.json
+++ b/uknown_lr4o55.pixels.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_lr4o55.pixels",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_lr4o55.pixels",
 	"sector": "K_5016",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1559187718553
+		},
+		{
+			"type": "died",
+			"when": 1568433898295
 		}
 	],
 	"next_scrape": 1567896059450,
@@ -99,6 +103,6 @@
 			]
 		}
 	],
-	"updt": 1567845128387,
-	"edit": 375
+	"updt": 1567855507147,
+	"edit": 376
 }
