--- a/uknown_gi8uls.data_check_sim.json
+++ b/uknown_gi8uls.data_check_sim.json
@@ -6,7 +6,7 @@
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566218845296,
-	"last_scraped": 1568439473321,
+	"last_scraped": 1568444416859,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568480921296,
+	"next_scrape": 1568488045228,
 	"category": "dice_roller",
-	"last_update": 1568439473321,
+	"last_update": 1568444416859,
 	"output": [
 		{
 			"args": {},
-			"calls": 997865,
+			"calls": 1007494,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"n a f",
@@ -67,6 +67,6 @@
 			]
 		}
 	],
-	"updt": 1568434787009,
-	"edit": 96
+	"updt": 1568439530025,
+	"edit": 97
 }
